# alter-engine

./: .gitignore  CMakeLists.txt  README.md  alter-engine.sln  alter-engine.vcxproj  alter-engine.vcxproj.filters  build.cmd  imgui.ini  main.cpp  main.h
lang-other/: main-ar.cpp
objects/: gameobject.cpp  gameobject.h  scene.cpp  scene.h
src/: main.cpp
ui/: console.cpp  console.h  options.cpp  options.h  sidebar.cpp  sidebar.h  topbar.cpp  topbar.h
